docs: 重写项目 README 文档
包含项目简介、功能特性、技术栈、项目结构、快速开始、
数据库配置、后端部署、小程序配置、飞书集成、接口文档等完整说明